--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "socicon.js",
   "version": "0.0.1",
   "dependencies": {
-    "gulp": "~3.8.6",
+    "gulp": "^3.8.6",
+    "gulp-autoprefixer": "0.0.8",
+    "gulp-csso": "^0.2.9",
+    "gulp-rename": "^1.2.0",
     "gulp-sass": "~0.9.3",
-    "gulp-autoprefixer": "0.0.8"
+    "gulp-uglify": "^0.3.1",
+    "gulp-watch": "^0.6.8"
   }
 }
